# BioDCASE-Tiny-2025

./: .gitignore  Model Try.md  NOTICE  Notes.md  README.md  TASK_DESCRIPTION.md  _create_splits.py  biodcase.py  check_model.py  config.py  data_preprocessing.py  embedded_code_generation.py  feature_extraction.py  main.py  model.py  model_training.py  paths.py  pipeline_config.yaml  pyproject.toml  unlabeled_evaluator.py
biodcase_tiny/embedded/: esp_target.py  esp_toolchain.py
biodcase_tiny/embedded/firmware/: .gitignore  CMakeLists.txt  LICENSE  README.md  sdkconfig.defaults
biodcase_tiny/embedded/firmware/.devcontainer/idf_v5_1_2/: devcontainer.json
biodcase_tiny/embedded/firmware/docker/: Dockerfile
biodcase_tiny/embedded/firmware/main/: CMakeLists.txt  esp_micro_profiler.cpp  esp_micro_profiler.h  feature_config.cpp.jinja  feature_config.h  feature_config_generated.h  feature_extraction.cpp  feature_extraction.h  idf_component.yml  main.cpp  metrics.cpp  metrics.h  model.cpp.jinja  model.h  op_resolver.h  span.hpp
biodcase_tiny/feature_extraction/: feature_config_generated.py  feature_extraction.py  nb_fft.py  nb_isqrt.py  nb_log32.py  nb_mel.py  nb_shift_scale.py
schemas/: feature_config.fbs
test/biodcase_tiny/embedded/: test_build.py
test/biodcase_tiny/embedded/models/: ok_model.keras
test/biodcase_tiny/feature_extraction/: test_feature_extraction.py  test_fft.py  test_log32.py  test_mel.py
