[tool.poetry]
name = "biodcase"
version = "0.1.0"
description = ""
authors = ["Giovanni <giovanni@fold.ai>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
llvmlite = ">=0.44"
numpy = "<2.2"
pandas = "^2.2.3"
librosa = "^0.10.2.post1"
keras = "^3.8.0"
tensorflow = "^2.18.0"
docker = "^7.1.0"
tqdm = "^4.67.1"
matplotlib = "<3.10"
numba = "^0.61.0"
pytest = "^8.3.5"
jinja2 = "^3.1.6"
pyarrow = "^19.0.1"
dask = "^2025.2.0"
plotly = "^6.0.1"
pydantic = "^2.11.3"
kaleido = "0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
